erDiagram
    USER ||--o{ BOOKING_REQUEST : makes
    USER ||--o{ BOOKING_APPROVAL : approves
    USER ||--o{ MAINTAINS : reports
    USER ||--o{ MAINTAINS : assigns
    
    SPACE ||--o{ BOOKING_REQUEST : has
    SPACE ||--o{ SPACE_FACILITY : contains
    SPACE ||--o{ MAINTAINS : requires
    SPACE ||--o{ ROOM_STATUS : has
    
    FACILITY ||--o{ SPACE_FACILITY : equips
    
    BOOKING_REQUEST ||--|| BOOKING_APPROVAL : generates
    BOOKING_REQUEST ||--o{ ROOM_STATUS : initial_condition
    BOOKING_REQUEST ||--o{ ROOM_STATUS : final_condition
    
    BOOKING_APPROVAL ||--o{ REQUEST_STATUS : has
    
    MAINTAINS ||--o{ MAINTENANCE_STATUS : has
    
    USER_ROLE ||--o{ USER : defines
    
    USER {
        string user_id PK
        string email UK
        string phone_number UK
        string role_id FK
        string account_status
    }
    
    SPACE {
        string space_id PK
        string space_name
        string space_type
        int capacity
        string current_status FK
    }
    
    FACILITY {
        string facility_id PK
        string facility_name
    }
    
    SPACE_FACILITY {
        string space_id PK, FK
        string facility_id PK, FK
    }
    
    BOOKING_REQUEST {
        string booking_id PK
        string space_id FK
        string booker_id FK
        date booking_date
        time booking_start_time
        time booking_end_time
    }
    
    BOOKING_APPROVAL {
        string booking_request_id PK
        string booking_id FK
        string staff_id FK
        string request_status FK
        time decision_time
    }
    
    MAINTAINS {
        string maintenance_id PK
        string space_id FK
        string reporter_id FK
        string assigned_staff_id FK
        string maintenance_status FK
    }
    
    USER_ROLE {
        int role_id PK
        string role_name UK
    }
    
    ROOM_STATUS {
        int status_id PK
        string status_name UK
    }
    
    REQUEST_STATUS {
        int status_id PK
        string status_name UK
    }
    
    MAINTENANCE_STATUS {
        int status_id PK
        string status_name UK
    }